# tetribot

./: LICENSE  README.md
tetridiscobot/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
tetridiscobot/cogs/: profile.py
